manifests/rsvplease-dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rsvplease-dev
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: rsvplease-dev
